--- a/organizer/package.json
+++ b/organizer/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "chai": "^4.3.4",
