--- a/events/composer.json
+++ b/events/composer.json
@@ -9,10 +9,11 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "jenssegers/mongodb": "^3.8",
         "laravel/lumen-framework": "^8.0",
-        "league/flysystem": "^2.3"
+        "league/flysystem": "^2.3",
+        "mmghv/lumen-route-binding": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
