--- a/auth/package.json
+++ b/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user",
+  "name": "auth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,25 +7,28 @@
     "start:dev": "ts-node-dev --respawn --transpile-only src",
     "test": "mocha -r ts-node/register src/tests/**/*.spec.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "mocha": "^9.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
