Reestruturação no serviço de usuário para centralizar operações de cliente e organizador

--- a/user/.env.example
+++ b/user/.env.example
@@ -1,4 +1,5 @@
 PORT=3000
 DB_URL=mongodb://localhost:27017/valeNightUsers
+AUTH_VERIFY_TOKEN_TOKEN=http://localhost:3500/auth/verifyToken
 JWT_SECRET=VAl3N1G8BR4B1551MO
 JWT_EXPIRES_IN=3600
