--- a/auth/package.json
+++ b/auth/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only src",
+    "start:prod":"npm run build && node dist/index.js",
+    "build":"tsc",
     "test": "mocha -r ts-node/register src/tests/**/*.spec.ts"
   },
   "dependencies": {
@@ -14,7 +16,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7"
+    "mongoose": "^6.0.7",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -23,6 +27,8 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^9.0.0",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.4",
     "mocha": "^9.1.1",
     "ts-node-dev": "^1.1.8",
