--- a/events/composer.json
+++ b/events/composer.json
@@ -10,6 +10,7 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "aws/aws-sdk-php": "^3.199",
         "jenssegers/mongodb": "^3.8",
         "laravel/lumen-framework": "^8.0",
         "league/flysystem": "^2.3",
@@ -18,6 +19,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
         "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.12",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.3"
     },
