--- a/auth/package.json
+++ b/auth/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only src",
-    "start:prod":"npm run build && node dist/index.js",
-    "build":"tsc",
+    "start:prod": "npm run build && node dist/index.js",
+    "build": "tsc",
     "test": "mocha -r ts-node/register src/tests/**/*.spec.ts"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
+    "oso": "^0.22.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
   },
