--- a/events/composer.json
+++ b/events/composer.json
@@ -10,11 +10,14 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "anik/form-request": "^4.3",
         "aws/aws-sdk-php": "^3.199",
+        "flipbox/lumen-generator": "^8.2",
         "jenssegers/mongodb": "^3.8",
         "laravel/lumen-framework": "^8.0",
-        "league/flysystem": "^2.3",
-        "mmghv/lumen-route-binding": "^1.0"
+        "league/flysystem": "^1.1",
+        "mmghv/lumen-route-binding": "^1.0",
+        "ext-fileinfo": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
@@ -34,6 +37,13 @@
         "classmap": [
             "tests/"
         ]
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
+        }
     },
     "config": {
         "preferred-install": "dist",
