--- a/events/composer.json
+++ b/events/composer.json
@@ -10,14 +10,16 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "ext-fileinfo": "*",
         "anik/form-request": "^4.3",
         "aws/aws-sdk-php": "^3.199",
+        "darkaonline/l5-swagger": "^8.0",
+        "darkaonline/swagger-lume": "^8.0",
         "flipbox/lumen-generator": "^8.2",
         "jenssegers/mongodb": "^3.8",
         "laravel/lumen-framework": "^8.0",
         "league/flysystem": "^1.1",
-        "mmghv/lumen-route-binding": "^1.0",
-        "ext-fileinfo": "*"
+        "mmghv/lumen-route-binding": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
