--- a/events/composer.json
+++ b/events/composer.json
@@ -13,12 +13,12 @@
         "ext-fileinfo": "*",
         "anik/form-request": "^4.3",
         "aws/aws-sdk-php": "^3.199",
-        "darkaonline/l5-swagger": "^8.0",
         "darkaonline/swagger-lume": "^8.0",
         "flipbox/lumen-generator": "^8.2",
         "jenssegers/mongodb": "^3.8",
         "laravel/lumen-framework": "^8.0",
         "league/flysystem": "^1.1",
+        "mattkingshott/axiom": "^3.2",
         "mmghv/lumen-route-binding": "^1.0"
     },
     "require-dev": {
