--- a/auth/package.json
+++ b/auth/package.json
@@ -10,8 +10,10 @@
     "test": "mocha -r ts-node/register src/tests/**/*.spec.ts"
   },
   "dependencies": {
+    "@vendia/serverless-express": "^4.5.2",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
