Auth service lambda deploy

--- a/auth/package.json
+++ b/auth/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node-dev --respawn --transpile-only src",
-    "start:prod": "npm run build && node dist/index.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/app.local.ts",
+    "start:prod": "npm run build && node dist/app.local.js",
     "build": "tsc",
     "test": "mocha -r ts-node/register src/tests/**/*.spec.ts"
   },
   "dependencies": {
     "@vendia/serverless-express": "^4.5.2",
+    "aws-lambda": "^1.0.7",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
