--- a/auth/tsconfig.json
+++ b/auth/tsconfig.json
@@ -1,7 +1,15 @@
 {
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
+        // "importHelpers": true,
+        "resolveJsonModule": true,
+        "moduleResolution": "node",
         "module": "commonJS",
-        "outDir": "dist"
+        "outDir": "dist",
     },
     "exclude": [
         "node_modules"
