--- a/user/package.json
+++ b/user/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@vendia/serverless-express": "^4.5.2",
+    "aws-lambda": "^1.0.7",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
