--- a/events/composer.json
+++ b/events/composer.json
@@ -13,6 +13,8 @@
         "ext-fileinfo": "*",
         "anik/form-request": "^4.3",
         "aws/aws-sdk-php": "^3.199",
+        "bref/bref": "^1.4",
+        "bref/laravel-bridge": "^1.1",
         "darkaonline/swagger-lume": "^8.0",
         "flipbox/lumen-generator": "^8.2",
         "jenssegers/mongodb": "^3.8",
